fix maven exec